<?php

namespace App\Models;

use Database\Factories\PatientFactory;
use Illuminate\Database\Eloquent\Casts\Attribute;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Database\Eloquent\Relations\HasOne;
use App\Models\PatientSocioeconomic;
use Illuminate\Database\Eloquent\SoftDeletes;

/**
 * @property-read int $id
 */
class Patient extends Model
{
    /** @use HasFactory<PatientFactory> */
    use HasFactory, SoftDeletes;

    protected $fillable = [
        'user_id',
        'first_name',
        'last_name',
        'date_of_birth',
        'gender',
        'address',
        'city',
        'postal_code',
        'phone',
        'emergency_contact_name',
        'emergency_contact_phone',
        'blood_type',
        'allergies',
        'medical_notes',

    ];

    protected static function booted(): void
    {
        static::deleted(function (Patient $patient) {
            $patient->socioeconomic?->delete();
        });

        static::restored(function (Patient $patient) {
            PatientSocioeconomic::withTrashed()->where('patient_id', $patient->id)->first()?->restore();
        });
    }

    public function user(): BelongsTo
    {
        return $this->belongsTo(User::class);
    }

    protected function fullName(): Attribute
    {
        return Attribute::make(
            get: fn () => "{$this->first_name} {$this->last_name}",
        );
    }

    public function socioeconomic(): HasOne
    {
        return $this->hasOne(PatientSocioeconomic::class);
    }

    public function visits(): HasMany
    {
        return $this->hasMany(Visit::class)->latest('date');
    }

    protected function casts(): array
    {
        return [
            'date_of_birth' => 'date',
        ];

    }
}
