---
title: Class Diagram - nutri-ledger Domain Model
---
classDiagram
    class User {
        +int id
        +string name
        +string email
        +string password
        +string role
        +timestamp deleted_at
        +isAdmin() bool
        +isDoctor() bool
        +isPatient() bool
        +initials() string
    }

    class Patient {
        +int id
        +int user_id
        +string first_name
        +string last_name
        +date date_of_birth
        +string gender
        +string phone
        +string address
        +string city
        +string postal_code
        +string emergency_contact_name
        +string emergency_contact_phone
        +string blood_type
        +text allergies
        +text medical_notes
        +timestamp deleted_at
        +fullName() string
    }

    class PatientSocioeconomic {
        +int id
        +int patient_id
        +string marital_status
        +int number_of_dependents
        +string living_arrangement
        +string employment_status
        +string occupation
        +string income_level
        +bool has_health_insurance
        +string education_level
        +string smoking_status
        +string alcohol_consumption
        +string physical_activity_level
        +bool has_family_support
        +bool has_caregiver
        +string transportation_access
        +string food_security_status
        +text dietary_restrictions_cultural
        +text additional_notes
    }

    class Visit {
        +int id
        +int patient_id
        +int doctor_id
        +date date
        +text notes
    }

    User "1" --> "0..1" Patient : has
    Patient "1" --> "1" PatientSocioeconomic : has
    Patient "1" --> "0..*" Visit : has
    User "1" --> "0..*" Visit : conducts as doctor
